[metadata]
name = saltext.sap_control
description = SaltStack extension for sapcontrol
long_description = file: README.md
long_description_content_type = text/markdown
author = 'Benjamin Wegener, Alexander Wilke'
keywords = salt-extension
url = https://github.com/SAPUCC/saltext-sap_control
project_urls =
    Source=https://github.com/SAPUCC/saltext-sap_control
    Tracker=https://github.com/SAPUCC/saltext-sap_control/issues
license = GPLv3
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers

platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.6
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools-declarative-requirements
install_requires =
  salt>=3003
  requests
  zeep
  # Add other module install requirements above this line

[options.packages.find]
where = src
exclude =
    tests


[options.entry_points]
salt.loader=
  saltext.sap_control = saltext.sap_control

[options.extras_require]
  tests =
    pytest==6.2.4
    pytest-salt-factories==0.906.0
  dev =
    nox==2021.6.12
    pre-commit==2.13.0
    pylint
    six
    SaltPyLint
  docs =
    furo
    sphinx
    sphinx-copybutton
    sphinx-prompt
    sphinxcontrib-spelling
    importlib_metadata; python_version < "3.8"
  docsauto =
    sphinx-autobuild

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[sdist]
owner = root
group = root
